--- a/reethu-pickels/pom.xml
+++ b/reethu-pickels/pom.xml
@@ -68,6 +68,12 @@
       <artifactId>spring-orm</artifactId>
       <version>5.3.23</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>reethu-pickels</finalName>
