--- a/reethu-pickels/pom.xml
+++ b/reethu-pickels/pom.xml
@@ -88,6 +88,12 @@
       <version>1.6.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>5.8.10</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>reethu-pickels</finalName>
